parser/tests/Delete.test
#   Copyright 2011-2015 Quickstep Technologies LLC.
#   Copyright 2015 Pivotal Software, Inc.
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

delete from test where tb1=1
--
DeleteStatement[relation_name=test]
+-where_predicate=Equal
  +-left_operand=AttributeReference[attribute_name=tb1]
  +-right_operand=Literal
    +-NumericLiteral[numeric_string=1,float_like=false]
==

delete from test
--
DeleteStatement[relation_name=test]
==

delete from table
--
ERROR: syntax error (1 : 13)
delete from table
            ^
==

delete from table test
--
ERROR: syntax error (1 : 13)
delete from table test
            ^
==

delete from test1, test2
--
ERROR: syntax error (1 : 18)
delete from test1, test2
                 ^
